PSP/borradores/ae/jwt/REST-AdrianSaavedra/src/main/java/org/example/restadriansaavedra/common/errors/MouseAlreadyExistsException.java
package org.example.restadriansaavedra.common.errors;

public class MouseAlreadyExistsException extends RuntimeException{
    public MouseAlreadyExistsException(String message) {
        super(message);
    }
}
